# transformer-builder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  publish_package.yml
test/: test_builder.py
test/builders/: test_transformer_builder.py
test/test_transformer/test_attention/: test_multi_head_attention.py  test_self_attention_block.py
test/torch_extensions/: test_encoder.py
tests/: conftest.py  helpers.py
tests/cases/attention/: __init__.py  multi_head_attention_cases.py  self_attention_cases.py
tests/cases/layers/: __init__.py  residual_connection_cases.py
tests/end_to_end/: test_self_attention.py
tests/integration/test_attention/: test_multi_head_attention.py  test_self_attention.py
tests/integration/test_layers/: test_residual_connection.py
tests/unit/test_attention/: test_multi_head_attention.py  test_self_attention.py
tests/unit/test_decoder/: test_builder.py
tests/unit/test_encoder/: test_encoder_block.py
tests/unit/test_layers/: test_residual_connection.py
tests/unit_tests/test_attention/: __init__.py  test_multi_head_attention.py  test_self_attention.py
tests/unit_tests/test_decoder/: __init__.py
transformer_builder/: __init__.py  builder.py
transformer_builder/attention/: __init__.py  multi_head_attention.py  self_attention.py
transformer_builder/builders/: self_attention_block.py  transformer.py
transformer_builder/decoder/: __init__.py  decoder_block.py
transformer_builder/encoder/: encoder.py
transformer_builder/layers/: __init__.py  residual_connection.py
transformer_builder/transformer/: __init__.py  builder.py  decoder.py  encoder.py  transformer.py
(+12 files in other folders)
